<resources>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyA-ofhyWX2dAzcrBBuxZHyG82bwMk4zblM</string>
    <string name="facebook_app_id">2340302366264764</string>
    <string name="fb_login_protocol_scheme">fb2340302366264764</string>
    <string name="app_name">Yas Mart</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="Preferred_country">Preferred Country</string>
    <string name="kindly_select_language_for_your_app_experience">Kindly select a language for your app experience</string>
    <string name="select_country_you_want_to_proceed">Select Country you want to proceed</string>
    <string name="english_by_default">English(By default)</string>
    <string name="english">English</string>
    <string name="error_something_went_wrong_please_retry">Something went wrong please retry</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="arabic">Arabic</string>
    <string name="proceed">Proceed</string>
    <string name="login_as_guest">Login as Guest</string>
    <string name="login">Log In</string>
    <string name="email_address">Email Address/Mobile Number</string>
    <string name="password">Password</string>
    <string name="new_password">New Password</string>
    <string name="re_enter_new_password">Re-Enter New Password</string>
    <string name="street_locality">Street/Locality</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="signup">Sign Up</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="category">Categories</string>
    <string name="deals">Deals</string>
    <string name="cart">Cart</string>
    <string name="setting">Setting</string>
    <string name="trending_products">Trending Products</string>
    <string name="stores">Stores</string>
    <string name="offer">% off</string>
    <string name="view_all">View All</string>
    <string name="register">Register</string>
    <string name="personal_detail">Personal Details</string>
    <string name="log_out">Log Out</string>
    <string name="billing_shipping_address">Billing/Shipping Address</string>
    <string name="optional">  (optional)</string>
    <string name="dont_have_an_account">Don\'t have an account? Sign up</string>
    <string name="full_name">Full Name</string>
    <string name="available_balance">Available Balance:</string>
    <string name="name">Name</string>
    <string name="search_for_product">Search for products</string>
    <string name="email">Email Id</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wallet">My Wallet</string>
    <string name="wallet_balance">Wallet Balance</string>
    <string name="e_receipt">E-receipt</string>
    <string name="my_saved_cart">My Saved Card</string>
    <string name="download_invoice">Downloaded Invoice</string>
    <string name="manage_address">Manage Address</string>
    <string name="change_language">Change Language</string>
    <string name="set_default_language">Set Default Language</string>
    <string name="chose_language">Chose Default Language</string>
    <string name="change_language_english_by_default">Change Language English (By Default) Arabic</string>
    <string name="my_support">Support</string>
    <string name="my_points">My Points</string>
    <string name="my_coupon">My Coupons</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="alternate_mobile_number">Alternate Mobile Number</string>
    <string name="email_id">Email id</string>
    <string name="select_country">Select Country</string>
    <string name="city">City</string>
    <string name="shiping_address">Shipping Address</string>
    <string name="building_name">Building Name Street/Locality Nearby Location Zip Code</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="near_by_location">Nearby Location</string>
    <string name="zip_code">Zip Code</string>
    <string name="submit">Submit</string>
    <string name="save_proceed">Save and Proceed</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="alert">Alert</string>
    <string name="verification_code">Verification Code</string>
    <string name="zero">0</string>
    <string name="otp_will_expires_in">OTP will expires in </string>
    <string name="sec">00:30 sec</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="profile_creation">Profile Creation</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="reset_pass">Reset Password</string>
    <string name="change_pass">Change Password</string>
    <string name="dollar_symbol">$</string>
    <string name="verify">Verify</string>
    <string name="enter_new_password">Enter a new Password</string>
    <string name="back_press_exit_line">Press back again to exit</string>
    <string name="please_enter_your_registered_email_id_and_mobile_no">Please enter your registered email ID or mobile number to reset your password</string>
    <string name="enter_4_digit_verification_code_sent_on_your_registered_mobile_number">Enter 4 digit verification code (OTP) sent on your registered mobile number or Email id</string>
    <string name="error_exception">some exception occurred</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="dialog_camera">Camera</string>
    <string name="dialog_gallery">Gallery</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="save_changes">Save Changes</string>
    <string name="save_changes_categories">Save Changes Categories</string>
    <string name="country">Country</string>
    <string name="email_address_edit_profile">Email Address</string>
    <string name="profile_phone_no">Phone Number</string>
    <string name="house_number">House Number Building/Tower Society/Locality Alternate Mobile Number District</string>
    <string name="password_change">Password change Successfully!!</string>
    <string name="message_press_once_again_to_exit" translatable="false">Press once again to exit!</string>
    <string name="title_category">Category</string>
    <string name="enter_your_card_details">Enter your card details Expiry date</string>
    <string name="deals_categories_store">Deals Categories Store</string>
    <string name="message_reload">Something went wrong\n Tap to retry</string>
    <string name="message_no_internet_connection">No Internet Connection. Please connect your phone to Internet and try again</string>
    <string name="title_sub_category">Sub Categories</string>
    <string name="title_store">Choose Preferred Store</string>
    <string name="select_store">Select Store</string>
    <string name="title_trending_product">Trending Products</string>
    <string name="title_cart">Cart</string>
    <string name="title_deals">Deals</string>
    <string name="my_orders_activity_title">My Orders</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin malesuada lorem eu turpis euismod, id venenatis diam euismod. In hac habitasse platea dictumst.</string>
    <string name="text_email">Email</string>
    <string name="yas_mart_support_gmail">Yasmart_support@gmail.com</string>
    <string name="yas_mart_support_gmail_want_call">Yasmart_support@gmail.com Want Call with us?</string>
    <string name="want_call_with_us">Want Call with us?</string>
    <string name="text_1800_3988_3988">1800 - 3988 - 3988</string>
    <string name="text_send_us_message_btn">Send Us Message?</string>
    <string name="text_support">Support</string>
    <string name="msg_is_about">Message is about</string>
    <string name="write_msg">Write message</string>
    <string name="send_messages">Send Message</string>
    <string name="saved_address">Saved Address</string>
    <string name="save_address">Save Address</string>
    <string name="place_order">Place Order</string>
    <string name="continue_btn">Continue</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="cancel_text">Are you sure you want to cancel this order?</string>
    <string name="select_reason">Select A Reason for Cancellation</string>
    <string name="cancel_success">Cancellation request has been successfully sent !</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="legal">Legal</string>
    <string name="need_help">Need Help</string>
    <string name="refund">Refund</string>
    <string name="replace">Replace</string>
    <string name="fashion_clinic">Fashion Clinic</string>
    <string name="add_address">Add Addess</string>
    <string name="modify_order">Modify Order</string>
    <string name="Edit_address">Edit Addess</string>
    <string name="notification">Notification</string>
    <string name="not_available">Not Available</string>
    <string name="your_card_number">Your Card Number</string>
    <string name="name_on_card">Name on Card</string>
    <string name="fashion_trending">Fashion Trending Products</string>
    <string name="payable_amount">Payable Amount(Inclusive of all taxes) Cashes Collection Charges</string>
    <string name="feedback_to_company">Feedback to Company?</string>
    <string name="write_feedback">Write Feedback</string>
    <string name="expiry_date">Expiry Date</string>
    <string name="get_20_off"><![CDATA[Get 20% OFF on your use code]]></string>
    <string name="get_20_off_first_order"><![CDATA[Get 20% OFF on your first YasMart Order on the App Maximum discount: $100 per oder]]></string>
    <string name="password_notification">Change Password Notification</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="please_accept_terms_conditions"><![CDATA[Please Accept Terms & Conditions]]></string>
    <string name="first_name_should_only_contain_alphabets"><![CDATA[First Name Should only Contain Alphabets & Whitespace]]></string>
    <string name="last_name_should_only_contain_alphabets"><![CDATA[Last Name Should only Contain Alphabets & Whitespace]]></string>
    <string name="NEWS_CHANNEL_ID">news</string>
    <string name="debit_card">Debit Card</string>
    <string name="credit_card">Credit Card</string>
    <string name="CHANNEL_NEWS">News</string>
    <string name="payment">Payment</string>
    <string name="accept">Accept</string>
    <string name="CHANNEL_DESCRIPTION">Get informed with new updates</string>
    <string name="DEBUG_TAG">LearningPushNotifications</string>
    <string name="title_select_payment_mode">Select Payment Mode</string>
    <string name="title_payment_summary">Payment Summary</string>
    <string name="downloaded_invoice">Downloaded Invoice</string>
    <string name="invoice_detail">Invoice Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="order_placed">Yay! Order Successfully Placed</string>
    <string name="please_enter_emailid">Please Enter Email ID</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="default_language">Default Language</string>
    <string name="current_language">Current Language</string>
    <string name="language_message">Your current language and default language are different. Do you want to continue with your Default Language or, Current Language?</string>
    <string name="write_your_comment_here">Write your comment here.</string>
    <string name="delevery_message">It seems you have permission of delivery boy What do you want to continue with?</string>
    <string name="as_delevery">As Delivery Boy</string>
    <string name="as_user">As User</string>
</resources>