<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="wrap_content">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_margin="@dimen/_20sdp"
        android:textColor="@color/black"
        android:text="@string/delevery_message"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@color/color_divider_line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/tv_delivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_10sdp"
            android:text="@string/as_delevery"
            android:textAlignment="center"
            android:layout_weight="1"
            android:textColor="@color/color_sky_blue" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_divider_line"/>

        <TextView
            android:id="@+id/tv_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_regular"
            android:padding="@dimen/_10sdp"
            android:textAlignment="center"
            android:text="@string/as_user"
            android:layout_weight="1"
            android:textColor="@color/color_sky_blue" />
    </LinearLayout>
</LinearLayout>