<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_250sdp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@drawable/cancel_dialog_confirm_bg"
    android:orientation="vertical">


    <ImageView
        android:layout_width="@dimen/_35sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_horizontal"
        android:padding="@dimen/_5sdp"
        android:src="@drawable/popup_delete_icon" />


    <TextView
        android:id="@+id/tvMesg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center"
        android:text="@string/cancel_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_15" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:background="@color/color_text_9F9F9F" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal"
        android:weightSum="2">


        <TextView
            android:id="@+id/no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16" />

        <TextView
            android:id="@+id/yes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/color_text_6F6F6F"
            android:textSize="@dimen/sp_16" />

    </LinearLayout>


</LinearLayout>